[package]
name = "bytey"
homepage = "https://github.com/Stefanowhb/bytey"
repository = "https://github.com/Stefanowhb/bytey"
version = "0.1.0"
edition = "2021"
description = "Bytey provides a convenient and easy to use byte storage"
readme = "../README.md"
keywords = ["buffers", "io", "utility", "byte", "endian", "big-endian", "little-endian"]
categories = ["data-structures", "encoding", "network-programming"]
license = "MIT"

[dependencies]
bytey_byte_buffer = {path = "../bytey_byte_buffer"}