[package]
name = "bytey"
homepage = "https://github.com/Stefanowhb/bytey"
repository = "https://github.com/Stefanowhb/bytey"
version = "0.4.0"
edition = "2021"
description = "Bytey provides a convenient and easy to use byte storage"
readme = "../README.md"
keywords = ["buffers", "io", "utility", "byte", "endian"]
categories = ["data-structures", "encoding", "network-programming"]
license = "MIT"

[dependencies]
bytey_byte_buffer = { path = "../bytey_byte_buffer", version = "0.3.0" }
bytey_derive = { path = "../bytey_derive", version = "0.3.0" }
