[package]
name = "bytey_byte_buffer"
homepage = "https://github.com/Stefanowhb/bytey"
repository = "https://github.com/Stefanowhb/bytey"
version = "0.1.1"
edition = "2021"
description = "Bytey ByteBuffer code, use Bytey instead"
keywords = ["buffers", "io", "utility", "byte", "endian"]
categories = ["data-structures", "encoding", "network-programming"]
license = "MIT"

[features]
serde_bincode = ["bincode"]

[dependencies]
thiserror = "1.0.30"
cfg-if = "1.0.0"
bincode = { version = "2.0.0-beta.2", optional = true, features = ["serde"] }

[[test]]
name = "Bincode"
path = "tests/bincode/test.rs"
required-features = ["serde_bincode"]
