[package]
name = "bytey_byte_buffer"
homepage = "https://github.com/Stefanowhb/bytey"
repository = "https://github.com/Stefanowhb/bytey"
version = "0.3.0"
edition = "2024"
description = "Bytey ByteBuffer code, use Bytey instead"
keywords = ["buffers", "io", "utility", "byte", "endian"]
categories = ["data-structures", "encoding", "network-programming"]
license = "MIT"

[dependencies]
thiserror = "2.0.12"
