[package]
name = "bytey_derive"
homepage = "https://github.com/Stefanowhb/bytey"
repository = "https://github.com/Stefanowhb/bytey"
version = "0.2.0"
edition = "2021"
description = "Bytey derive macros, use Bytey instead"
keywords = ["buffers", "io", "utility", "byte", "endian"]
categories = ["data-structures", "encoding", "network-programming", "macro"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.32"
syn = "2.0.28"
proc-macro2 = "1.0.66"

[dev-dependencies]
bytey = { path = "../bytey" }