[package]
name = "bytey_derive"
homepage = "https://github.com/Stefanowhb/bytey"
repository = "https://github.com/Stefanowhb/bytey"
version = "0.3.0"
edition = "2024"
description = "Bytey derive macros, use Bytey instead"
keywords = ["buffers", "io", "utility", "byte", "endian"]
categories = ["data-structures", "encoding", "network-programming"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.101"
proc-macro2 = "1.0.95"

[dev-dependencies]
bytey = { path = "../bytey" }